--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,6 +2,22 @@
 // Body
 $body-bg: #f8fafc;
 
+//== Bootstrap resolutions
+$screen-xs-min: 0;
+$screen-sm-min: 576px;
+$screen-md-min: 768px;
+$screen-lg-min: 992px;
+$screen-xl-min: 1230px;
+
+//== Flex Grid system
+// Define your custom flex responsive grid.
+$container-width: 300px;
+$container-xs-width: 480px;
+$container-sm-width: 750px;
+$container-md-width: 970px;
+$container-lg-width: 1200px;
+$container-xl-width: 1800px;
+
 // Typography
 $font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
@@ -18,3 +34,42 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$black: #000;
+$white: #fff;
+$turquoise: #0dbeff;
+$gray: #f7f7f7;
+$dark-gray: #f2f2f2;
+$delimiter-double-border: #e4eeff;
+$delimiter-doted: #e0e0ff;
+$heading-number: #dfdfdf;
+$icon-bg: #e0e0ff;
+$white-dopdown: #eff5ff;
+$white-dropdown_border-color: #dee9fc;
+$wave-background: #07e3ff;
+$black_rgba: rgba(0, 0, 0, .3);
+
+
+// button width and heights
+$bsk-btn_s-length: 41px;
+$bsk-btn_m-length: 52px;
+$bsk-btn_l-length: 68px;
+$bsk-btn_xl-length: 86px;
+
+//Grid Layout
+$xl-min: 'screen and (min-width: #{$screen-xl-min})';
+$lg-min: 'screen and (min-width: #{$screen-lg-min})';
+$md-max: 'screen and (max-width: #{$screen-lg-min - 1})';
+$md-min: 'screen and (min-width: #{$screen-md-min})';
+$sm-max: 'screen and (max-width: #{$screen-md-min - 1})';
+$sm-min: 'screen and (min-width: #{$screen-sm-min})';
+$xs-max: 'screen and (max-width: #{$screen-sm-min - 1})';
+$xs-min: 'screen and (min-width: #{$screen-xs-min})';
+$xm-max: 'screen and (max-width: 479px)';
+$xm-min: 'screen and (min-width: 480px)';
+
+//Var classes
+%bg-style {
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
