--- a/resources/sass/components/buttons/style.scss
+++ b/resources/sass/components/buttons/style.scss
@@ -1,5 +1,5 @@
-@import "../../variables";
-//@import "../../assets/styles/mixins";
+@import "../../assets/variables";
+@import "../../assets/mixins";
 
 /*
 * Buttons
