--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,10 +5,15 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-//components
+//Assets
 @import './assets/skins/brk-blue';
 @import './assets/skins/brk-base-color';
 @import './assets/style';
+
+//Elements
 @import './components/timelines/style';
 @import "./components/buttons/style";
 @import "./components/dividers/style";
+
+//Utilities
+@import './assets/text-style';
