--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,9 +11,15 @@
 @import './assets/style';
 
 //Elements
+@import "./components/delimiters/style";
 @import './components/timelines/style';
+@import './components/forms/style';
+@import 'components/panels/style';
 @import "./components/buttons/style";
 @import "./components/dividers/style";
 
 //Utilities
 @import './assets/text-style';
+@import './assets/type-styles';
+@import './assets/offsets';
+@import './assets/sizing';
