--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,7 @@
 
 //Elements
 @import "./components/delimiters/style";
+@import "./components/loaders/style";
 @import './components/timelines/style';
 @import './components/forms/style';
 @import 'components/panels/style';
