feature: added social links to auth page;

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,6 +18,7 @@
 @import 'components/panels/style';
 @import "./components/buttons/style";
 @import "./components/dividers/style";
+@import "./components/social/style";
 
 //Utilities
 @import './assets/text-style';
